# GB-style

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: benchmark_ct_proxy.yaml  benchmark_medium.yaml  benchmark_small.yaml  benchmark_sparse.yaml  default.yaml
data/catalog/: instances.csv
docs/: data_availability_statement.md  data_note_missing_sections.md  paper_mapping.md
src/gbext/: config.py  types.py
src/gbext/baselines/: direct_karatsuba.py  direct_schoolbook.py
src/gbext/cli/: main.py
src/gbext/experiments/: benchmark_matrix.py  break_even_study.py  correctness_matrix.py  ct_proxy_study.py  sparse_modulus_study.py
src/gbext/fields/: gf2_poly.py  gf2m.py  irreducible.py
src/gbext/gbstyle/: linear_operator.py  multiply_karatsuba.py  multiply_schoolbook.py  representation.py
src/gbext/poly/: core.py
src/gbext/utils/: io.py  logging_utils.py  seeds.py  timing.py
tests/: test_core_math.py
